# graphics-book

./: LICENSE  nmake.inc  readme
.github/workflows/: build.yml
Chapter-1/: Makefile
Chapter-2/: area.cpp  clipseg.cpp  convex.cpp  delauney.cpp  distance.cpp  intersect.cpp
Chapter-3/: test.cpp
Chapter-7/: circle.cpp  floodfill.cpp  line.cpp  test.cpp
Code/: nmake.inc
Code/Chapter-1/: CMakeLists.txt  Makefile.nmake  test.cpp
Code/Chapter-10/: CMakeLists.txt  Makefile.linux  Makefile.nmake  csg.cpp  csg.h  path-tracer.cpp  trace-1.cpp  trace-2.cpp  trace-3.cpp  trace-4.cpp  tracer-2.cpp  tracer-2.h  tracer.cpp  tracer.h
Code/Chapter-11/: Makefile  Makefile.nmake  MyGlWidget.h  glfw-test.cpp  qt-test.cpp  qt-test.pro  test-simple.cpp  test.cpp
Code/Chapter-12/: CMakeLists.txt  Makefile.linux  Makefile.nmake  blinn-phong.glsl  lambert.glsl  simple.fsh  simple.glsl  simple.vsh  sphere.cpp  test-classes.cpp  test.cpp
Code/Chapter-13/: CMakeLists.txt  Flame.tga  Makefile  Makefile.nmake  bumpmapping.cpp  bumpmapping.glsl  burn-2.cpp  burn-2.glsl  burn.cpp  burn.glsl  cube-box.glsl  decal.glsl  embm.cpp  embm.glsl  envmapping.cpp  envmapping.glsl  explosion.cpp  explosion.glsl  fire.cpp  fire.glsl  fur.cpp  fur.glsl  glass-2.cpp  glass-2.glsl  glass.cpp  glass.glsl  glow.py  pbr.cpp  pbr.glsl  projective.cpp  projective.glsl  reflection-2.glsl  reflection.cpp  ripple-1.glsl  sdf.cpp  shadow-2.glsl  shadow-mapping-2.cpp  shadow-mapping.cpp  shadow.glsl
Code/Chapter-13/SDF/: font.fnt  gen-sdf.bat  gen.sh
Code/Chapter-2/: classify.cpp  convex.cpp  delauney.cpp  graham.cpp  intersect.cpp  ptintpoly.cpp  ptintri.cpp  scanline.py
Code/Chapter-3/: CMakeLists.txt  Makefile.linux  Makefile.nmake  quat2tbn.cpp  test.cpp
Code/Chapter-4/: rayaabb.cpp  raybox.cpp  raysphere.cpp  raytri.cpp
Code/Chapter-5/: bspnode.h  bvh.h  grid.h  kdnode.h  rtree.h
Code/Chapter-6/: CMakeLists.txt  Makefile.linux  Makefile.nmake  hsltorgb.cpp  hsvtorgb.cpp  test.cpp
Code/Chapter-7/: CMakeLists.txt  Makefile.linux  Makefile.nmake  tri.cpp
Code/Chapter-9/: CMakeLists.txt  Makefile.linux  Makefile.nmake  aniso.cpp  aniso.glsl  ashikhmin-shirley.cpp  ashikhmin-shirley.glsl  blinn-phong-normalized.cpp  blinn-phong-normalized.glsl  blinn-phong.cpp  cook-torrance.cpp  cook-torrance.glsl  disney.cpp  disney.glsl  lambert.cpp  lambert.glsl  lommel-seeliger.cpp  lommel-seeliger.glsl  minnaert.cpp  minnaert.glsl  oren-nayar-opt.cpp  oren-nayar-opt.glsl  oren-nayar.cpp  oren-nayar.glsl  phong-normalized.cpp  phong-normalized.glsl  phong.cpp  phong.glsl  strauss.cpp  strauss.glsl  ward.cpp  ward.glsl
Code/Core/: AssimpConverter.h  AtomicCounter.h  BasicMesh.cpp  BasicMesh.h  Camera.cpp  Camera.h  Data.cpp  Data.h  Framebuffer.cpp  Framebuffer.h  GlutCameraWindow.h  GlutRotateWindow.h  GlutWindow.cpp  GlutWindow.h  Log.cpp  Log.h  MeshLoader.cpp  Program.cpp  Program.h  Renderpass.h  Sampler.h  Scene.cpp  ScreenCube.h  Texture.cpp  Texture.h  TgaImage.cpp  TgaImage.h  VertexBuffer.cpp  VertexBuffer.h  bbox.cpp  bbox.h  common.h  glUtilities.cpp  glUtilities.h  kdop.h  obb.cpp  obb.h  plane.h  randUtils.h  sphere.cpp  (+4 more)
Code/Libs/SOIL/: SOIL.c
Code/python-code/: 4d.glsl  Buffer.py  Font.py  Framebuffer.py  Mesh.py  Program.py  Renderpass.py  Screen.py  Texture.py  VertexFormat.py  Window.py  aniso.glsl  aniso.py  biplanar.glsl  blinn-phong.glsl  blinn-phong.py  bump-mapping.py  bumpmapping.glsl  cook-torrance-aniso.fsh  cook-torrance-aniso.py  cook-torrance-aniso.vsh  cook-torrance-tex.fsh  cook-torrance-tex.vsh  cook-torrance.fsh  cook-torrance.py  cook-torrance.vsh  cube4d.py  dds.py  envmapping.py  flow-1.glsl  flow-2.glsl  flow-3.glsl  flow-4.glsl  flow-5.glsl  flow-texture-5.py  font-demo.py  gltf-demo-2.py  gltf-demo.py  hedgehog.glsl  hedgehog.py  (+99 more)
Code/python-code/Font/: arial.fnt  ascii.fnt
Core/: BasicMesh.cpp  BasicMesh.h  Camera.h  Data.cpp  Data.h  Framebuffer.cpp  Framebuffer.h  GlutRotateWindow.h  GlutWindow.cpp  GlutWindow.h  Log.cpp  Log.h  Program.cpp  Program.h  Sampler.cpp  Scene.h  ScreenQuad.cpp  ScreenQuad.h  Texture.cpp  Texture.h  TgaImage.cpp  Timer.h  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  bbox.h  glUtilities.cpp  kdop.cpp  plane.cpp  randUtils.cpp  ray.cpp  ray.h  sphere.cpp  sphere.h  stringUtils.cpp  stringUtils.h
Core/eig3x3/: readme.txt
Core/libs/: libjpeg.lib  libpng.lib  zlib.lib
Textures/: Fieldstone.dds  brick.tga  noise-3D.dds  relief_tile1.tga
Textures/Bumpmaps/: BUMPMAP.TGA  blocks_bump.tga  bump.tga  sphereBu.tga  wall_bump.tga
Textures/Cubemaps/: Terrain_negx_0001.tga  Terrain_negy_0001.tga  Terrain_negz_0001.tga  Terrain_posx_0001.tga  Terrain_posy_0001.tga  Terrain_posz_0001.tga  cm_back.tga  cm_bottom.tga  cm_front.tga  cm_left.tga  cm_right.tga  cm_top.tga
